[project]
name = "jack1142-attestation-testing"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jakub Kuczys", email = "me@jacken.men" }
]
requires-python = ">=3.10"
dependencies = [
    "pypi-attestations>=0.0.29",
]

[project.scripts]
jack1142-attestation-testing = "jack1142_attestation_testing:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
